# juditha

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  kache.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  python.yml
canonicaller/: __init__.py  api.py  cache.py  cli.py  config.py  io.py  settings.py  source.py  store.py
canonicaller/sources/: __init__.py  aleph.py  wikipedia.py
juditha/: __init__.py  api.py  cache.py  classify.py  clean.py  cli.py  index.py  io.py  match.py  scan.py  settings.py  source.py  store.py  util.py
juditha/sources/: __init__.py  aleph.py  juditha.py  wikipedia.py
tests/: conftest.py  test.py  test_aleph.py  test_api.py  test_cache.py  test_classifier.py  test_cli.py  test_index.py  test_io.py  test_juditha.py  test_match.py  test_normalize.py  test_scan.py  test_sources.py  test_store.py  test_wikipedia.py
tests/fixtures/: catalog.json  catalog.yml  eu_authorities.ftm.json  names.txt  store.yml
