[tool.poetry]
name = "canonicaller"
version = "0.0.1"
description = "A super-fast canonical name lookup service"
authors = ["Simon Wörpel <simon@investigativedata.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.scripts]
canonicaller = "canonicaller.cli:cli"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
ftmq = "^0.3.3"
fastapi = "^0.103.2"
redis = "^5.0.1"
fakeredis = "^2.19.0"
typer = "^0.9.0"
rich = "^13.6.0"
uvicorn = "^0.23.2"
alephclient = "^2.3.6"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
bump2version = "^1.0.1"
pytest = "^7.4.2"
pytest-coverage = "^0.0"
pytest-env = "^1.0.1"
httpx = "^0.25.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
env = [
    "DEBUG=1",
    "STORE_CONFIG=tests/fixtures/store.yml"
]
