[tool.poetry]
name = "juditha"
version = "0.0.4"
description = "A super-fast canonical name lookup service"
authors = ["Simon Wörpel <simon@investigativedata.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.scripts]
juditha = "juditha.cli:cli"

[tool.poetry.dependencies]
python = ">3.11,<3.12"
ftmq = "^0.5.1"
fastapi = "^0.108.0"
redis = "^5.0.1"
fakeredis = "^2.20.1"
typer = "^0.9.0"
rich = "^13.7.0"
uvicorn = ">=0.25,<0.30"
alephclient = "^2.3.6"
requests = "^2.31.0"
nltk = "^3.8.1"
spacy = "^3.7.2"
pydantic = "^2.5.3"
spaczz = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
bump2version = "^1.0.1"
pytest = "^7.4.2"
pytest-coverage = "^0.0"
pytest-env = "^1.0.1"
httpx = "^0.25.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
env = [
    "DEBUG=1",
    "STORE_CONFIG=tests/fixtures/store.yml",
    "FUZZY=true"
]
